# Cub_ROS

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  README.md  run.sh  stop.sh  target.env
ros/cub4_bringup/: CMakeLists.txt  package.xml
ros/cub4_bringup/config/: VLP32C-velodyne_transform_node-params.yaml  diagnostics.yaml  zed_f9p.yaml
ros/cub4_bringup/launch/: common.launch.py  launch_at_boot.launch.py  minipc_launch_at_boot.launch.py
ros/cub_behavior_tree/: CMakeLists.txt  bt_plugins.xml  cub_behavior_tree.xml  navigate_or_follow.xml  navigate_though_pose.xml  navigate_through_pose.xml  navigate_to_pose_w_replanning_and_recovery.xml  package.xml
ros/cub_behavior_tree/action/: AcquireFrontTarget.action
ros/cub_behavior_tree/routes/: 2d_waypoints.yaml  3d_waypoints.yaml  coordinates.yaml  coordinates_cub2_test.yaml  coordinates_mcub_test.yaml  furo_waypoints.yaml
ros/cub_behavior_tree/src/: follow_zone_plugins.cpp  front_target_server.cpp  front_target_server_main.cpp  waypoint_navigator.cpp
ros/cub_bringup/: CMakeLists.txt  README.md  package.xml
ros/cub_bringup/launch/: 2d_mapping.launch.py  3d_mapping.launch.py  common.launch.py  cub.launch.py  hardware_cub2.launch.py  hardware_cub3.launch.py  hardware_mcub.launch.py  launch_at_boot.launch.py  lidarslam.launch.py  localization.launch.py  mapping.launch.py  navigation.launch.py  rosbag.launch.py  rosbag_localization.launch.py  target_cub2.launch.py  target_mcub.launch.py  velodyne-tilt-node.launch.py
ros/cub_bringup/params/: gnss_fusion.yaml  imu_only_odom.yaml  lidarslam.yaml  mapper_params_online_async.yaml  mapper_params_online_async_with_3d.yaml  mapping.rviz  nav2_params.yaml  slam.yaml
ros/cub_bringup/scripts/: distance_logger.py  ekf_pose_logger.py
ros/cub_bringup/src/: clear_odom.cpp  gnss_odom_fusion.cpp  joy_to_dualsense.cpp  odom_as_localization.cpp  odom_to_tf.cpp  teleop_joy.cpp  tilt_correction_node.cpp
ros/cub_commander/: CMakeLists.txt  package.xml
ros/cub_commander/routes/: coordinates.yaml
ros/cub_commander/src/: cub_commander.cpp  cub_commander.py  joy_to_dualsense.cpp  joy_to_xbox1914.cpp  joypad.cpp  nav2_action_client.cpp  start_button_serial.cpp
ros/cub_description/: CMakeLists.txt  package.xml
ros/cub_description/launch/: display.launch.py
ros/cub_description/urdf/: cub2.urdf  cub3.urdf  cub4.urdf  mcub.urdf  spidar.urdf
ros/cub_diagnostics/: CMakeLists.txt  package.xml
ros/cub_diagnostics/config/: example.yaml
ros/cub_diagnostics/launch/: example.launch.py
ros/cub_diagnostics/src/: diag_rviz_converter_node.cpp  fix_status_node.cpp  jetson_state_node.cpp  linux_state_node.cpp  topic_hz_node.cpp
ros/cub_mapping/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
ros/cub_mapping/launch/: map_publisher.launch.py  mapping_tool.launch.py  terrain_analysis.launch.py  waypoint_editor.launch.py
ros/cub_mapping/params/: map_converter.yaml  terrain_analysis.yaml  waypoint_editor.yaml
ros/cub_mapping/rviz/: map_converter.rviz  map_converter.self.rviz  waypoint_editor.rviz
ros/cub_mapping/src/: map_converter_node.cpp  pointcloud_to_2d_tool.cpp  terrain_analysis.cpp  waypoint_edit_tool.cpp  waypoint_manager_node.cpp
ros/cub_mapping/srv/: AddRegion.srv  AddWaypoint.srv  CreateGroup.srv  DeleteGroup.srv  DeleteWaypoint.srv  GetGroupList.srv  InsertWaypoint.srv  LoadWaypoints.srv  MoveWaypoint.srv  RenameGroup.srv  SetRequireInput.srv  UpdateWaypointYaw.srv
ros/cub_navigation/: CMakeLists.txt  README_GNSS_LOCALIZATION.md  package.xml
ros/cub_navigation/launch/: 2d_localization.launch.py  3d_cub_navigation.launch.py  bringup_launch.py  cub_costmapfilter.launch.py  cub_navigation.launch.py  gnss_as_localization.launch.py  hdl_3d_cub_navigation.launch.py  localization_launch.py  nav2_bringup_launch.py  nav2_localization_launch.py  nav2_navigation_launch.py  navigation_launch.py  odom_as_localization.launch.py  waypoint_editor.launch.py
ros/cub_navigation/param/: create_waypoints.rviz  cub2_nav2.yaml  cub2_nav2_3d.yaml  cub3_nav2.yaml  cub3_nav2_3d.yaml  cub4_nav2.yaml  gnss_localization.yaml  mcub_nav2.yaml  mcub_tb3base.yaml  nav2_rviz_view.rviz
ros/cub_navigation/src/: waypoint_editor.cpp  waypoint_visualizer.cpp
ros/cub_simulation/: package.xml  setup.cfg  setup.py
ros/cub_simulation/cub_simulation/: topic_probe.py
ros/cub_simulation/test/: test_topic_probe.py
ros/cub_visualization/: CMakeLists.txt  package.xml
ros/cub_visualization/config/: cub.rviz  mcub.rviz
ros/cub_visualization/launch/: ign_gazebo.launch.py  mcub_cartographer.launch.py  rviz.launch.py  turtlebot3_cartographer.launch.py  turtlebot3_navigation2.launch.py
ros/ekf_localizer/: CMakeLists.txt  README.md  package.xml
ros/ekf_localizer/launch/: ekf_locali.launch.py  ekf_locali_city_hall.launch.py  ekf_locali_road_side.launch.py
ros/ekf_localizer/pcd/: add_pcd_files_here.txt
ros/ekf_localizer/src/: dynamic_tf_cub.cpp  ekf.cpp  map_matcher.cpp
ros/ekf_localizer_ros2/: CMakeLists.txt  README.md  package.xml
ros/ekf_localizer_ros2/launch/: ekf_locali.launch.py
ros/ekf_localizer_ros2/manual/: manual.md
ros/ekf_localizer_ros2/src/: dynamic_tf_cub.cpp  ekf.cpp  gps_updater.cpp  map_matcher.cpp
ros/handy1_bringup/: CMakeLists.txt  README.md  package.xml
ros/handy1_bringup/config/: MID360_config.json  camera_pinhole_mid360.yaml  mid360.yaml  rosbag_qos.yaml  rpgsc.yaml
ros/handy1_bringup/launch/: launch_at_boot.launch.py  mapping_mid360.launch.py  msg_MID360.launch.py  rosbag.launch.py
ros/handy1_bringup/scripts/: composable_recorder_manager.py  web_control_node.py
ros/handy1_bringup/src/: frequency_checker.cpp  imu_frequency_checker.cpp  livox_frequency_checker.cpp  pwm_timesync.cpp
ros/handy1_bringup/web/: index.html
ros/handy2_bringup/: CMakeLists.txt  README.md  package.xml
ros/handy2_bringup/config/: jt128-config.yaml  rosbag_qos.yaml  rpgsc.yaml
ros/handy2_bringup/src/: pico.cpp  (+2 more)
ros/mcub_bringup/: CMakeLists.txt  package.xml
ros/perception/: CMakeLists.txt  package.xml
ros/spidar_bringup/: CMakeLists.txt  package.xml
(+318 files in other folders)
