<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cub_diagnostics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cub@todo.todo">cub</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz_2d_overlay_msgs</depend>
  <depend>rviz_2d_overlay_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
